/*
 * Copyright (C) 2017 Dgraph Labs, Inc. and Contributors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Use protos/gen.sh to generate .pb.go files.
syntax = "proto3";

package protos;


service Monitor {
    rpc GetLayout (LayoutRequest) returns (LayoutReply) {}
    rpc OsdConfig(OsdConfigRequest) returns (OsdConfigReply) {}

}

message LayoutRequest {
    string object_name = 1;
    string pool_name = 2;
}

message LayoutReply {
    int32 ret_code = 1;
    string pg_name = 2;
    repeated Osd osds = 3;
}

message Osd{
    int32 id = 1;
    string addr = 2;
    uint64 weight = 3;
    string host = 4;
    string zone = 5;
    bool up = 6;
    bool in = 7;
}

message OsdMap {
    uint64      epoch            = 1;
    map<uint64, Osd>  memberList = 2;
}

message OsdConfigRequest {
    string keyRing = 1;
    Osd id = 2;
    enum OpType {
        ADD = 0;
        DEL = 1;
        IN = 2;
        OUT = 3;
        UP = 4;
        DOWN = 5;
    }
    OpType op_type = 3;
}

message OsdConfigReply {
    int32 ret_code = 1;
    int32 index = 2;
}

message Pool{
    int32 id = 1;
    int32 name = 2;
    int32 size = 3;
}

message PoolConfigRequest {
    string keyRing = 1;
    enum OpType {
        ADD = 0;
        DEL = 1;
        EDT = 2;
    }
    OpType op_type = 2;
    string name = 3;
    int32 size = 4;
    int32 pg_numbers = 5;
    enum DistributePolicy {
            HOST = 0;
            ZONE = 1;
    }
    DistributePolicy policy = 6;
}

message PoolConfigReply {
    int32 ret_code = 1;
}

message Pg{
    int32 id = 1;
    int32 pool_id = 2;
    repeated int32 osd_ids = 3;
}